iam-server/deploy/dev/wecoding-iam-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: wecoding-iam
  name: wecoding-iam
  namespace: wecoding-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wecoding-iam
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: wecoding-iam
    spec:
      imagePullSecrets:
        - name: "wecodingimagesecret"
      serviceAccountName: wecoding-iam
      containers:
        - image: ""
          imagePullPolicy: Always
          name: wecoding-iam
          resources:
            limits:
              cpu: 1000m
              memory: 2048Mi
            requests:
              cpu: 500m
              memory: 1024Mi
          volumeMounts:
          - mountPath: "/etc/wecoding-iam/config.yaml"
            name: "wecoding-iam"
            readOnly: false
            subPath: "config.yaml"
      volumes:
        - configMap:
            defaultMode: 0777
            items:
              - key: "config.yaml"
                path: "config.yaml"
            name: "wecoding-iam"
          name: "wecoding-iam"
