iam-server/deploy/dev/wecoding-iam-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: alb
  name: wecoding-iam
  namespace: wecoding-system
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: wecoding-iam
            port:
              number: 80
        path: /
        pathType: Prefix
